--- a/THANKS
+++ b/THANKS
@@ -43,6 +43,7 @@ Declan Moran
 Del Merritt <del@alum.mit.edu>
 Devin Davila <daviladsoftware@gmail.com>
 Dmytro Rybachenko <atmoliton@gmail.com>
+Dylan T. <dktapps@pmmp.io>
 Eelco Dolstra
 Elvis Angelaccio
 Erwin Haid <erwin.haid@gmx.de>
@@ -115,6 +116,7 @@ Pierre Wendling <pierre.wendling.4@gmail.com>
 Pierre-Louis Cabelguen <plcabelguen@googlemail.com>
 PW Hu <jlu.hpw@foxmail.com>
 Rafał Mikrut
+ralfjunker
 Randy <randy408@protonmail.com>
 Remi Collet <remi@fedoraproject.org>
 rezso <rezso@rezso.net>
@@ -126,6 +128,7 @@ Roberto Tirabassi <rtirabassi@3di.it>
 robhz786 <robhz786@gmail.com>
 Roland Ortloff <Ortloff.R@gmx.de>
 Rosen Penev <rosenp@gmail.com>
+Rudi Heitbaum
 Ryan Burns <rtburns@protonmail.com>
 Sam Sappenfield
 scribam
@@ -133,6 +136,7 @@ Sebastian Kemper <sebastian_ml@gmx.net>
 Sebastian Schmitt <sebastian.schmitt@auvesy.de>
 Sergei Ozerov <ru.programmist@gmail.com>
 shenlebantongying
+Shimi
 Simon Talbot <simont@nse.co.uk>
 SpaceIm
 Stephen Bryant <steve@bawue.de>
