--- a/man/zip_set_archive_flag.man
+++ b/man/zip_set_archive_flag.man
@@ -30,7 +30,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.TH "ZIP_SET_ARCHIVE_FLAG" "3" "January 23, 2023" "NiH" "Library Functions Manual"
+.TH "ZIP_SET_ARCHIVE_FLAG" "3" "July 19, 2023" "NiH" "Library Functions Manual"
 .nh
 .if n .ad l
 .SH "NAME"
@@ -62,6 +62,12 @@ Supported flags are:
 \fRZIP_AFL_CREATE_OR_KEEP_FILE_FOR_EMPTY_ARCHIVE\fR
 If this flag is cleared, the archive file will be removed if the archive is empty.
 If it is set, an empty archive will be created, which is not recommended by the zip specification.
+.TP 20n
+\fRZIP_AFL_RDONLY\fR
+If this flag is set, no modification to the archive are allowed.
+This flag can only be cleared if it was manually set with
+\fBzip_set_archive_flag\fR,
+not if the archive was opened read-only.
 .TP 20n
 \fRZIP_AFL_WANT_TORRENTZIP\fR
 If this flag is set, the archive will be written in torrentzip format.
