--- a/man/zip_source_filep.man
+++ b/man/zip_source_filep.man
@@ -30,7 +30,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.TH "ZIP_SOURCE_FILEP" "3" "December 18, 2017" "NiH" "Library Functions Manual"
+.TH "ZIP_SOURCE_FILEP" "3" "June 30, 2023" "NiH" "Library Functions Manual"
 .nh
 .if n .ad l
 .SH "NAME"
@@ -67,11 +67,10 @@ bytes from offset
 \fIstart\fR
 from the open file stream
 \fIfile\fR.
-If
+For a description of the
 \fIlen\fR
-is 0 or \-1, the whole file (starting from
-\fIstart\fR)
-is used.
+argument, see
+zip_source_file(3).
 .PP
 If the file stream supports seeking, the source can be used to open
 a read-only zip archive from.
@@ -105,12 +104,18 @@ Required memory could not be allocated.
 libzip(3),
 zip_file_add(3),
 zip_file_replace(3),
-zip_source(3)
+zip_source(3),
+zip_source_file(3)
 .SH "HISTORY"
 \fBzip_source_filep\fR()
 and
 \fBzip_source_filep_create\fR()
 were added in libzip 1.0.
+.PP
+\fRZIP_LENGTH_TO_END\fR
+and
+\fRZIP_LENGTH_UNCHECKED\fR
+were added in libzip 1.10.1.
 .SH "AUTHORS"
 Dieter Baron <\fIdillo@nih.at\fR>
 and
