Updated libzip to 1.11.3

--- a/THANKS
+++ b/THANKS
@@ -32,6 +32,7 @@ ChrisAm1224
 Chris Nehren <cnehren+libzip@pobox.com>
 Christoph Cullmann <cullmann@kde.org>
 Christoph M. Becker <cmbecker69@gmx.de>
+Corentin Schreiber
 Coverity <info@coverity.com>
 cryi <cryi@tutanota.com>
 ctenter-scs
@@ -135,6 +136,7 @@ Roland Ortloff <Ortloff.R@gmx.de>
 Rosen Penev <rosenp@gmail.com>
 Rudi Heitbaum
 Ryan Burns <rtburns@protonmail.com>
+Sam James
 Sam Sappenfield
 Sandro Mani <manisandro@gmail.com>
 scribam
@@ -146,6 +148,7 @@ Shimi
 Simon Talbot <simont@nse.co.uk>
 SpaceIm
 Stephen Bryant <steve@bawue.de>
+sxkan
 Tabata Shintaro <tabata.shintaro@gmail.com>
 takase1121
 Tarmo Pikaro <tapika@yahoo.com>
